--- a/simpleplus/templates/tags.html
+++ b/simpleplus/templates/tags.html
@@ -5,7 +5,7 @@
 {% block content %}
 <section id="content">
     <h2 id="heading-title">Tags</h2>
-    <ul>
+    <ul id="tc-list">
     {% for tag, articles in tags|sort %}
         <li><a href="{{ SITEURL }}/{{ tag.url }}">{{ tag }}</a> ({{ articles|count }})</li>
     {% endfor %}
