--- a/theme/css/main.css
+++ b/theme/css/main.css
@@ -60,9 +60,10 @@
 
 
 #post-list{
-	padding: 0;
+    padding: 0;
 	list-style: none; 
-	margin: 0 8px; 
+    margin-right: 8px;
+    margin-left: 8px;
 	/* border: 2px solid blue;  */
 }
 
@@ -99,7 +100,8 @@
 }
 
 div.entry-content{
-	margin: 0 8px 0;
+    margin: 0 8px 0;
+    /* border: 2px solid blue;  */
 }
 
 footer.post-info{
