--- a/simpleplus/templates/base.html
+++ b/simpleplus/templates/base.html
@@ -39,10 +39,10 @@
                 <h1><a href="{{ SITEURL }}/">{{ SITENAME }}{% if SITESUBTITLE %} <strong>{{ SITESUBTITLE }}</strong>{% endif %}</a></h1>
         </header><!-- /#banner -->
         <nav id="menu"><ul>
-          <li><a href="/pages/about.html">About</a></li>
-          <li><a href="/index.html">Blog</a></li>
+          <li><a href="{{ SITEURL }}/pages/about.html">About</a></li>
+          <li><a href="{{ SITEURL }}/index.html">Blog</a></li>
           <li><a href="/CV.pdf">CV</a></li>
-          <li><a href="/tags.html">Tags</a></li>
+          <li><a href="{{ SITEURL }}/tags.html">Tags</a></li>
         </ul></nav><!-- /#menu -->
         {% block content %}
         {% endblock %}
