--- a/simpleplus_zh/templates/category.html
+++ b/simpleplus_zh/templates/category.html
@@ -1,6 +1,6 @@
 {% extends "index.html" %}
 
-{% block title %}{{ SITENAME }} - {{ category }} category{% endblock %}
+{% block title %}{{ SITENAME }} - {{ category }}{% endblock %}
 
 {% block content_title %}
 <h2 id="heading-title">类别为{{ category }}的文章</h2>
