--- a/simpleplus_zh/templates/tag.html
+++ b/simpleplus_zh/templates/tag.html
@@ -1,6 +1,6 @@
 {% extends "index.html" %}
 
-{% block title %}{{ SITENAME }} - {{ tag }} tag{% endblock %}
+{% block title %}{{ SITENAME }} - {{ tag }}{% endblock %}
 
 {% block content_title %}
 <h2 id="heading-title">标签为{{ tag }}的文章</h2>
