--- a/simpleplus_zh/templates/tags.html
+++ b/simpleplus_zh/templates/tags.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}{{ SITENAME }} - Tags{% endblock %}
+{% block title %}{{ SITENAME }} - 标签{% endblock %}
 
 {% block content %}
 <section id="content">
