--- a/simpleplus_zh/templates/categories.html
+++ b/simpleplus_zh/templates/categories.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}{{ SITENAME }} - Categories{% endblock %}
+{% block title %}{{ SITENAME }} - 分类{% endblock %}
 
 {% block content %}
 <section id="content">
