--- a/simpleplus/templates/base.html
+++ b/simpleplus/templates/base.html
@@ -49,7 +49,7 @@
         <footer id="contentinfo" class="body">
           <address id="about" class="vcard body">
           © 2020 <span xmlns:cc="http://creativecommons.org/ns#" property="cc:attributionName">Hang Xu.</span> Licensed under a <a rel="License" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
-          Proudly powered by <a href="https://getpelican.com/">Pelican</a>. Blog <a href="/pages/readme.html">README</a>.
+          Proudly powered by <a href="https://getpelican.com/">Pelican</a>. Blog <a href="/pages/readme.html">README</a>. <a href="/zh/index.html">中文站</a>.
           </address><!-- /#about -->
         </footer><!-- /#contentinfo -->
 </body>
