--- a/simpleplus/templates/translations.html
+++ b/simpleplus/templates/translations.html
@@ -2,7 +2,7 @@
 {% if article.translations %}
 Translations:
 {% for translation in article.translations %}
-<a href="{{ SITEURL }}/{{ translation.url }}" hreflang="{{ translation.lang }}">{{ translation.lang }}</a>
+<a href="{{ SITEURL }}/{{ translation.url }}" hreflang="{{ translation.lang }}">中文</a>
 {% endfor %}
 {% endif %}
 {% endmacro %}
