--- a/simpleplus/templates/page.html
+++ b/simpleplus/templates/page.html
@@ -15,8 +15,7 @@
 {% block content %}
 <section id="content">
     <h2 id="heading-title">{{ page.title }}</h2>
-    {% import 'translations.html' as translations with context %}
-    {{ translations.translations_for(page) }}
+
     <div class="entry-content">
     {{ page.content }}
     </div>
@@ -26,4 +25,8 @@
         </p>
     {% endif %}
 </section>
+<footer class="post-info">
+  {% import 'translations.html' as translations with context %}
+  {{ translations.translations_for(page) }}
+</footer>
 {% endblock %}
